--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"wrangler": "4.21.x"
 	},
 	"scripts": {
-		"build": "next build && opennextjs-cloudflare build",
+		"build": "next build",
+		"build:cloudflare": "opennextjs-cloudflare build",
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
 		"check": "npm run build && tsc",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
